--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,5 @@ url = "2.5.0"
 axum = "0.7.5"
 sdl2 = { version = "0.37.0", features = ["bundled"] }
 ffmpeg-sys-next = "7.0.0"
+objc2-app-kit = { version = "0.3.1", default-features = false, features = ["NSScreen", "objc2-core-foundation"] } 
+objc2 = "0.6.1"
