--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,9 @@ simplelog = { version = "0.12.2" }
 ffmpeg-next = "7.0.0"
 futures = "0.3.29"
 log = "0.4.21"
-str0m = "0.5.1"
+str0m = { version = "0.6.3", default-features = false, features = [
+"openssl", "sha1"
+]}
 jwt = "0.16.0"
 local-ip-address = "0.6.1"
 rand = "0.8.5"
@@ -24,7 +26,7 @@ tracing-subscriber = { version = "0.3", default-features = false, features = [
 ] }
 url = "2.5.0"
 axum = "0.7.5"
-sdl2 = { version = "0.37.0", features = ["bundled"] }
+sdl2 = { version = "0.37.0", features = ["bundled", "static-link"] }
 ffmpeg-sys-next = "7.0.0"
 
 [target.'cfg(target_os="macos")'.dependencies]
