--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ tracing-subscriber = { version = "0.3", default-features = false, features = [
 ] }
 url = "2.5.0"
 axum = "0.7.5"
+# TODO: make bundled conditional
 sdl2 = { version = "0.37.0", features = ["bundled", "static-link"] }
 ffmpeg-sys-next = "7.0.0"
 
